--- a/apps/web-app/src/app/create-invite/create-invite.css
+++ b/apps/web-app/src/app/create-invite/create-invite.css
@@ -1,11 +1,12 @@
 .createContainer {
-  background-color: rgba(244, 162, 97, 0.5);
+  background-color: rgba(244, 162, 97, 0.4);
   position: absolute;
   top: 50px;
   padding: 2rem;
   padding-right: 15rem;
   bottom: 0;
   width: 100%;
+  overflow:auto;
 }
 
 .createHeader {
